--- a/package.xml
+++ b/package.xml
@@ -42,9 +42,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>pcl_conversions</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>tf</build_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>sensor_msgs</run_depend>
-
+  <run_depend>tf</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
